# forge

./: .gitignore  .loopkit.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  install.sh  package.json  project.constraints.yaml  tsconfig.json
.github/workflows/: ci.yml  pipeline.yml  release.yml
agents/: architect-agent.md  developer-agent.md  devops-agent.md  po-agent.md  qa-agent.md  secops-agent.md  ux-agent.md
commands/forge/: approve.md  new-project.md  status.md  stop.md
docs/designs/: forge-loop-contract-test-harness.md
evals/: README.md
evals/desk-check-blocking/: eval.md  prompt.md
evals/iteration-completion/: eval.md  prompt.md
evals/no-implementation-before-red/: eval.md  prompt.md
evals/pull-not-push/: eval.md  prompt.md
evals/session-resume/: eval.md  prompt.md
evals/story-gate-rejection/: eval.md  prompt.md
evals/using-forge/: eval.md  prompt.md
example/: CONTEXT.md  README.md
example/docs/: empathy-map.md  event-storm.yaml  lean-canvas.md  linear-board-state.md  project.constraints.yaml
example/docs/adr/: ADR-001-open-library-search.md
example/stories/: BS-01.md
integrations/: claude-skills.sh
skills/acceptance-delivery/approving-stories/: HANDOFFS.md  LOOP.md  SKILL.md
skills/acceptance-delivery/finishing-stories/: HANDOFFS.md  LOOP.md  (+1 more)
tools/contract-proofs/: .gitignore  Makefile  README.md  dune-project
tools/contract-proofs/extraction/: dune
tools/contract-proofs/test/: dune  test_checker.ml
tools/contract-proofs/theories/: Extraction.v  Paths.v  Properties.v  Transitions.v  dune
(+59 files in other folders)
