(lang dune 3.17)
(name forge-contract-proofs)
(using coq 0.10)
(generate_opam_files true)
(source
 (github forge-framework/forge))
(authors "Forge Contributors")
(maintainers "Forge Contributors")
(license MIT)
(documentation https://github.com/forge-framework/forge)

(package
 (name forge-contract-proofs)
 (synopsis "Machine-checked proofs for the Forge Perfect Loop contract")
 (description
  "Coq formalization of the Forge delivery state machine and Perfect Loop properties, with extraction to OCaml.")
 (depends
  (ocaml (>= 4.14))
  (coq (>= 8.20))
  (dune (>= 3.17))
  (coq-mathcomp-ssreflect (>= 2.3))))
